# Choose-Your-Own-Adventure

backend/: database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: story.py
frontend/: index.html  vite.config.js
frontend/src/: App.css  index.css  util.js
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  ThemeInput.jsx
